fix: add margin-top to About page for improved spacing

--- a/src/app/about/about.module.scss
+++ b/src/app/about/about.module.scss
@@ -25,6 +25,10 @@ $breakpoint-small: 768px;
     }
 }
 
+.aboutPage{
+ margin-top: 2rem;
+}
+
 /* Call to Action */
 .callToAction {
     display: flex;
